plugins/stream-debugger/testData/chain/positive/primitive/SimpleInt.java
import java.util.stream.IntStream;

public class Baz {
  public static void main(String[] args) {
<caret>    final int res = IntStream.of(1).sum();
  }
}
